--- a/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
+++ b/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
@@ -4,24 +4,26 @@
   <div fxFlex="30%">
     <div class="mat-title">Add Video Metadata</div>
 
-    <form>
+    <form [formGroup]="saveVideoDetailsForm">
       <mat-form-field appearance="fill">
-        <mat-label>Input</mat-label>
-        <input matInput>
+        <mat-label>Title</mat-label>
+        <input matInput [formControl]="title" required />
       </mat-form-field>
       <mat-form-field appearance="fill">
-        <mat-label>Select</mat-label>
-        <mat-select>
-          <mat-option value="one">First option</mat-option>
-          <mat-option value="two">Second option</mat-option>
+        <mat-label>Description</mat-label>
+        <input matInput [formControl]="description" required />
+      </mat-form-field>
+      <mat-form-field appearance="fill">
+        <mat-select [formControl]="videoStatus">
+          <mat-option value="one">PUBLIC</mat-option>
+          <mat-option value="two">PRIVATE</mat-option>
         </mat-select>
       </mat-form-field>
+      <button type="submit" mat-raised-button color="primary">Save</button>
     </form>
   </div>
 
-  <div fxFlex="30%">
-    Video Player
-  </div>
+  <div fxFlex="30%">Video Player</div>
 
   <div fxFlex="20%">Hi</div>
 </div>
