--- a/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
+++ b/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
@@ -19,7 +19,47 @@
           <mat-option value="two">PRIVATE</mat-option>
         </mat-select>
       </mat-form-field>
-      <button type="submit" mat-raised-button color="primary">Save</button>
+      <mat-form-field class="example-chip-list" appearance="fill">
+        <mat-label>Tags</mat-label>
+        <mat-chip-list #chipList aria-label="Tag selection">
+          <mat-chip *ngFor="let tag of tags" (removed)="remove(tag)">
+            {{ tag }}
+            <button matChipRemove>
+              <mat-icon>cancel</mat-icon>
+            </button>
+          </mat-chip>
+          <input placeholder="Add tag..." [matChipInputFor]="chipList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+            (matChipInputTokenEnd)="add($event)" />
+        </mat-chip-list>
+      </mat-form-field>
+
+      <div>
+        <label for="inputGroupFile01">Upload Thumbnail:
+          <div class="custom-file">
+            <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01"
+              (change)="onFileSelected($event)" />
+          </div>
+          <br />
+          <div *ngIf="fileSelected">
+            <div>
+              <p>Selected File: {{ selectedFileName }}</p>
+            </div>
+            <div>
+              <button mat-raised-button color="primary" type="submit" (click)="onUpload()">
+                Upload
+              </button>
+            </div>
+          </div>
+          <br />
+        </label>
+      </div>
+
+      <div>
+        <button mat-raised-button color="primary" type="submit" (click)="onUpload()">
+          Save
+        </button>
+      </div>
     </form>
   </div>
 
