--- a/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
+++ b/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
@@ -63,7 +63,9 @@
     </form>
   </div>
 
-  <div fxFlex="30%">Video Player</div>
+  <div fxFlex="30%">
+    <app-video-player></app-video-player>
+  </div>
 
   <div fxFlex="20%">Hi</div>
 </div>
