--- a/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
+++ b/frontend/youtube-clone-ui/src/app/save-video-details/save-video-details.component.html
@@ -15,8 +15,8 @@
       </mat-form-field>
       <mat-form-field appearance="fill">
         <mat-select [formControl]="videoStatus">
-          <mat-option value="one">PUBLIC</mat-option>
-          <mat-option value="two">PRIVATE</mat-option>
+          <mat-option value="PUBLIC">PUBLIC</mat-option>
+          <mat-option value="PRIVATE">PRIVATE</mat-option>
         </mat-select>
       </mat-form-field>
       <mat-form-field class="example-chip-list" appearance="fill">
@@ -46,9 +46,7 @@
               <p>Selected File: {{ selectedFileName }}</p>
             </div>
             <div>
-              <button mat-raised-button color="primary" type="submit" (click)="onUpload()">
-                Upload
-              </button>
+              <button mat-raised-button color="primary" type="submit" (click)="onUpload()">Upload</button>
             </div>
           </div>
           <br />
@@ -56,9 +54,7 @@
       </div>
 
       <div>
-        <button mat-raised-button color="primary" type="submit" (click)="onUpload()">
-          Save
-        </button>
+        <button mat-raised-button color="primary" type="submit" (click)="saveVideo()">Save</button>
       </div>
     </form>
   </div>
